Prevent cards from being too tall

--- a/public/assets/less/main.less
+++ b/public/assets/less/main.less
@@ -54,6 +54,7 @@ section {
         overflow: auto;
         display: flex;
         flex-wrap: wrap;
+        align-items: flex-start;
     }
 
     &.slide {
